[metadata]
name = here-polyline-converter
version = 0.2.0
description = A tool to convert strings between HERE Flexible Polyline format and the (now legacy) format used in HERE Places API
long-description = file: README.md
author = HERE Europe B.V.
home-page = https://github.com/heremaps/python-flexpolyline-pbapi
url = https://here.com
license_files =
    LICENSE
platform = any
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
python_requires = >=3.7
package_dir =
    = src
install_requires = flexpolyline

[options.packages.find]
where = src
