[metadata]
name = here-polyline-converter
version = 0.2.1
author = HERE Europe B.V.
author_email = emmanuel.decitre@here.com
url = https://here.com
home_page = https://github.com/heremaps/here-polyline-converter
description = A tool to convert strings between HERE Flexible Polyline format and the (now legacy) format used in HERE Places API
long_description = file: README.md
long_description_content_type = text/markdown
license = The MIT License
license_files =
    LICENSE
keywords = HERE, Search, Polyline, GS7
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/heremaps/here-polyline-converter/issues
    Source = https://github.com/heremaps/here-polyline-converter

[options]
zip_safe = False
python_requires = >=3.7
package_dir =
    = src
install_requires = flexpolyline

[options.packages.find]
where = src
